--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uniubi-construction-wifi-education",
+  "name": "shaw-vite-template",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -11,7 +11,6 @@
     "prettier": "prettier --write '**/*.{less,css,md,json}'"
   },
   "dependencies": {
-    "antd": "^4.19.5",
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
