--- a/.prettierignore
+++ b/.prettierignore
@@ -1,7 +1,14 @@
 node_modules/
 # Ignore artifacts:
 build/
+dist/
 coverage/
+
+# Ignore all HTML files:
+*.html
+
+.gitignore
+.prettierignore
 
 vite-env.d.ts
 vite.config.ts
