--- a/package.json
+++ b/package.json
@@ -1,52 +1,48 @@
 {
   "name": "shaw-vite-template",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint '**/*.{js,jsx,tsx,ts}'",
-    "lint:fix": "eslint '**/*.{js,jsx,tsx,ts}' --fix",
-    "prettier": "prettier --write '**/*.{less,css,md,json}'"
+    "prepare": "husky install",
+    "lint": "eslint 'src/**/*.{js,jsx,tsx,ts}' --fix",
+    "prettier": "prettier --write src/**/*.{less,scss,css,md,json}",
+    "prepush": "yarn lint && yarn prettier"
   },
   "dependencies": {
-    "axios": "^0.26.1",
-    "classnames": "^2.3.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "eslint": "^8.23.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.23",
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
-    "@vitejs/plugin-react": "^1.0.7",
-    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "@types/node": "18.7.13",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/parser": "^5.35.1",
+    "@vitejs/plugin-react": "^2.0.1",
+    "axios": "^0.27.2",
+    "classnames": "^2.3.1",
     "consola": "^2.15.3",
     "dotenv": "^16.0.0",
-    "eslint": "^8.12.0",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.3.7",
-    "prettier": "^2.6.1",
-    "shaw-lint": "^1.0.0",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.0",
-    "vite-plugin-style-import": "^2.0.0",
-    "vite-react-jsx": "^1.1.2",
-    "yorkie": "^2.0.0"
-  },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
+    "eslint-config-ali": "^14.0.1",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "typescript": "^4.8.2",
+    "vite": "^3.0.9",
+    "vite-plugin-style-import": "^2.0.0"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "npm run lint:fix",
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "yarn lint",
       "git add ."
     ],
-    "*.{less,css,md,json}": [
-      "npm run prettier",
+    "src/**/": [
+      "yarn prettier",
       "git add ."
     ]
   },
