--- a/package.json
+++ b/package.json
@@ -1,50 +1,55 @@
 {
-  "name": "shaw-vite-template",
-  "private": true,
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "prepare": "husky install",
-    "lint": "eslint 'src/**/*.{js,jsx,tsx,ts}' --fix",
-    "prettier": "prettier --write src/**/*.{less,scss,css,md,json}",
-    "prepush": "yarn lint && yarn prettier"
-  },
-  "dependencies": {
-    "eslint": "^8.23.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.7.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "18.7.13",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/parser": "^5.35.1",
-    "@vitejs/plugin-react": "^2.0.1",
-    "axios": "^0.27.2",
-    "classnames": "^2.3.1",
-    "consola": "^2.15.3",
-    "dotenv": "^16.0.0",
-    "eslint-config-ali": "^14.0.1",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "typescript": "^4.8.2",
-    "vite": "^3.0.9",
-    "vite-plugin-style-import": "^2.0.0"
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": [
-      "yarn lint",
-      "git add ."
-    ],
-    "src/**/": [
-      "yarn prettier",
-      "git add ."
-    ]
-  },
-  "license": "MIT"
+	"name": "shaw-vite-template",
+	"private": true,
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview",
+		"prepare": "husky install",
+		"lint": "eslint src/**/*.{js,jsx,tsx,ts} --fix",
+		"prettier": "prettier --write src/**/*.{less,scss,css,md,json}",
+		"prepush": "yarn lint && yarn prettier"
+	},
+	"dependencies": {
+		"eslint": "^8.23.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"prettier": "^2.7.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
+	},
+	"devDependencies": {
+		"@babel/eslint-parser": "^7.19.1",
+		"@types/node": "18.7.13",
+		"@types/react": "^18.0.17",
+		"@types/react-dom": "^18.0.6",
+		"@typescript-eslint/parser": "^5.35.1",
+		"@vitejs/plugin-react": "^2.0.1",
+		"autoprefixer": "^10.4.12",
+		"classnames": "^2.3.1",
+		"dotenv": "^16.0.0",
+		"eslint-config-ali": "^14.0.1",
+		"eslint-plugin-import": "^2.26.0",
+		"husky": "^8.0.1",
+		"less": "^4.1.3",
+		"lint-staged": "^13.0.3",
+		"postcss": "^8.4.16",
+		"prettier-plugin-tailwindcss": "^0.1.13",
+		"tailwindcss": "^3.1.8",
+		"typescript": "^4.8.2",
+		"vite": "^3.0.9",
+		"vite-plugin-style-import": "^2.0.0"
+	},
+	"lint-staged": {
+		"src/**/*.{js,jsx,ts,tsx}": [
+			"yarn lint",
+			"git add ."
+		],
+		"src/**/": [
+			"yarn prettier",
+			"git add ."
+		]
+	},
+	"license": "MIT"
 }
