--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"preview": "vite preview",
 		"prepare": "husky install",
 		"lint": "eslint 'src/**/*.{js,jsx,tsx,ts}' --fix",
-		"prettier": "prettier --write src/**/*.{less,scss,css,md,json}",
+		"prettier": "prettier --write 'src/**/*.{less,scss,css,md,json}'",
 		"prepush": "yarn lint && yarn prettier"
 	},
 	"dependencies": {
@@ -22,9 +22,11 @@
 	"devDependencies": {
 		"@babel/eslint-parser": "^7.19.1",
 		"@babel/preset-react": "^7.18.6",
+		"@tailwindcss/forms": "^0.5.3",
 		"@types/node": "18.7.13",
 		"@types/react": "^18.0.17",
 		"@types/react-dom": "^18.0.6",
+		"@typescript-eslint/eslint-plugin": "^5.38.1",
 		"@typescript-eslint/parser": "^5.35.1",
 		"@vitejs/plugin-react": "^2.0.1",
 		"autoprefixer": "^10.4.12",
